--- a/src/App.css
+++ b/src/App.css
@@ -5,38 +5,40 @@
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+body {
+  font-family: Arial, sans-serif;
+  background-color: #272727;
+  color: #333;
+  margin: 0;
+  padding: 0;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.random-number-title {
+  font-size: 2rem;
+  margin-bottom: 1rem;
+  color: #fff;
+  position: absolute; 
+  top: 15%;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.random-number-button {
+  background-color: #646cff;
+  color: #fff;
+  border: none;
+  padding: 0.5rem 1rem;
+  border-radius: 0.5rem;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  position: absolute;
+  top: 22%;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
-.card {
-  padding: 2em;
+.random-number-button:hover {
+  background-color: #5a5a5a;
 }
 
-.read-the-docs {
-  color: #888;
-}
+
